--- a/arquivos-web/mirrorfashion/sobre.html
+++ b/arquivos-web/mirrorfashion/sobre.html
@@ -6,13 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre a Mirror Fashion</title>
-    <!-- aplicando css com a tag style -->
-    <style>
-        p{
-            color: blue;
-            background-color: yellow;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="../mirrorfashion/css/estilos.css">
 </head>
 
 <body>
