Every about and creating list and chances in the images.

--- a/arquivos-web/mirrorfashion/sobre.html
+++ b/arquivos-web/mirrorfashion/sobre.html
@@ -19,9 +19,9 @@
             participação em 118 deles</em>.</p>
 
     <figure>
-        <img src="../mirrorfashion/img/centro-distribuicao.png" alt="Foto do centro de distribuição da Mirror Fashion">
+        <img id="foto-legenda" src="../mirrorfashion/img/centro-distribuicao.png" alt="Foto do centro de distribuição da Mirror Fashion">
         <figcaption>
-
+            <p>Centro de distribuição da mirror Fashion</p>
         </figcaption>
     </figure>
 
@@ -35,9 +35,9 @@
     <h2> História </h2>
 
     <figure>
-        <img src="../mirrorfashion/img/familia-pelho.jpg" alt="foto da família Pelho">
+        <img id="foto-legenda" src="../mirrorfashion/img/familia-pelho.jpg" alt="foto da família Pelho">
         <figcaption>
-
+            <p>Família Pelho</p>
         </figcaption>
     </figure>
     <p> A fundação em 1932 ocorreu no momento da descoberta econônica do interior do Paraná. A
@@ -58,6 +58,12 @@
     <p> Dada a importância econômica da empresa para o Brasil, a família Pelho já recebeu diversos prêmios,
         homenagens e condecorações. Todos os presidentes do Brasil já visitaram as instalações da Mirror
         Fashion, além de presidentes da União Européia, Ásia e o secretário-geral da ONU.</p>
+
+    <h2>Diferenciais</h2>
+    <ul>
+        <li>Menor preço do varejo</li>
+        <li>Se você achar uma mais barata, levo o produto de graça</li>
+    </ul>
 </body>
 
 </html>
