working with position of the TAG in the HTML and doing changes in the CSS figure tag

--- a/arquivos-web/mirrorfashion/sobre.html
+++ b/arquivos-web/mirrorfashion/sobre.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -14,28 +14,30 @@
 
     <h1>A Mirror Fashion</h1>
 
-    <p> A <strong> Mirror Fashion </strong> é a maior empresa comércio eletrônico no segmento de moda em todo o mundo.
-        <em>Fundada em 1932, possui filiais em 124 países, sendo líder de mercado com mais de 90% de
-            participação em 118 deles</em>.</p>
 
-    <figure>
-        <img id="foto-legenda" src="../mirrorfashion/img/centro-distribuicao.png" alt="Foto do centro de distribuição da Mirror Fashion">
+    <figure id="centro-distribuicao">
+        <img src="../mirrorfashion/img/centro-distribuicao.png" alt="Foto do centro de distribuição da Mirror Fashion">
         <figcaption>
             <p>Centro de distribuição da mirror Fashion</p>
         </figcaption>
     </figure>
 
+    <p> A <strong> Mirror Fashion </strong> é a maior empresa comércio eletrônico no segmento de moda em todo o mundo.
+        <em>Fundada em 1932, possui filiais em 124 países, sendo líder de mercado com mais de 90% de
+            participação em 118 deles</em>.</p>
+
     <p> Nosso centro de distribuição fica em Jacarezinho, no Paraná. De lá, saem 48 aviões que
         distribuem nossos produtos às casas do mundo todo. Nosso centro de distribuição:</p>
 
-    <p> Compre suas roupas e acessórios na Mirror Fashion. Acesse nossa loja ou entre em contato
-        se tiver dúvidas. Conheça também nossa história e nossos diferenciais.</p>
+    <p> Compre suas roupas e acessórios na Mirror Fashion. Acesse <a href="../mirrorfashion/index.html" target="_self">
+            nossa loja </a>ou entre em contato
+        se tiver dúvidas. Conheça também nossa <a href="#historia"> história </a> e nossos <a
+            href="#diferenciais">diferenciais</a>.</p>
 
+    <h2 id="historia"> História </h2>
 
-    <h2> História </h2>
-
-    <figure>
-        <img id="foto-legenda" src="../mirrorfashion/img/familia-pelho.jpg" alt="foto da família Pelho">
+    <figure id="familia-pelho">
+        <img src="../mirrorfashion/img/familia-pelho.jpg" alt="foto da família Pelho">
         <figcaption>
             <p>Família Pelho</p>
         </figcaption>
@@ -59,11 +61,15 @@
         homenagens e condecorações. Todos os presidentes do Brasil já visitaram as instalações da Mirror
         Fashion, além de presidentes da União Européia, Ásia e o secretário-geral da ONU.</p>
 
-    <h2>Diferenciais</h2>
+    <h2 id="diferenciais">Diferenciais</h2>
     <ul>
         <li>Menor preço do varejo</li>
         <li>Se você achar uma mais barata, levo o produto de graça</li>
     </ul>
+
+    <div id="rodape">
+        <img src="../mirrorfashion/img/logo.png" alt="Logo da Mirror Fashion">
+    </div>
 </body>
 
 </html>
