creating header at the index page

--- a/arquivos-web/mirrorfashion/sobre.html
+++ b/arquivos-web/mirrorfashion/sobre.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre a Mirror Fashion</title>
-    <link rel="stylesheet" type="text/css" href="../mirrorfashion/css/estilos.css">
+    <link rel="stylesheet" type="text/css" href="../mirrorfashion/css/sobrestl.css">
 </head>
 
 <body>
@@ -69,6 +69,7 @@
 
     <div id="rodape">
         <img src="../mirrorfashion/img/logo.png" alt="Logo da Mirror Fashion">
+        &copy;	Copyright	Mirror	Fashion
     </div>
 </body>
 
