--- a/arquivos-web/mirrorfashion/index.html
+++ b/arquivos-web/mirrorfashion/index.html
@@ -1,12 +1,49 @@
 <!DOCTYPE html>
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../mirrorfashion/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="../mirrorfashion/css/estilo.css">
     <title>Mirror Fashion</title>
 </head>
+
 <body>
-    <h1>Olá sou o index.html</h1>
+    <!--Conteúdo Cabeçalho-->
+    <header class="container">
+        <!-- Título da página -->
+        <h1><img src="../mirrorfashion/img/logo.png" alt="Mirror Fashion"></h1>
+
+        <p class="sacola">
+            Nenhum item na socola de compras
+        </p>
+        <nav class="menu-opcoes">
+            <ul>
+                <li><a href="#" target="_self">Sua Conta</a></li>
+                <li><a href="#" target="_self">Lista de Desejos</a></li>
+                <li><a href="#" target="_self">Cartâo Fidelidade</a></li>
+                <li><a href="sobre.html" target="_self">Sobre</a></li>
+                <li><a href="#" target="_self">ajuda</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <!-- Contéudo principal-->
+    <div id="main">
+
+    </div>
+
+    <!--Painéis com destaques-->
+    <div id="destaques">
+
+    </div>
+
+    <!--Conteúdo do rodapé-->
+    <footer>
+
+    </footer>
 </body>
+
 </html>
