Aplly and formating menus, header, section, page 82

--- a/arquivos-web/mirrorfashion/index.html
+++ b/arquivos-web/mirrorfashion/index.html
@@ -13,6 +13,9 @@
 <body>
     <!--Conteúdo Cabeçalho-->
     <header class="container">
+        <!--[if	lt	IE	9]>
+			<script	src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+		<![endif]-->
         <!-- Título da página -->
         <h1><img src="../mirrorfashion/img/logo.png" alt="Mirror Fashion"></h1>
 
@@ -31,15 +34,214 @@
     </header>
 
     <!-- Contéudo principal-->
-    <div id="main">
+    <div id="main" class="container destaque">
+        <section class="busca">
+            <h2>Busca</h2>
+            <form action="#">
+                <input type="search" name="" id="">
+                <button type="submit">Buscar</button>
+            </form>
+        </section>
+        <!-- Fim busca -->
 
+        <section class="menu-departamento">
+            <h2>Departamentos</h2>
+            <nav>
+                <ul>
+                    <li><a href="#" target="_self"></a>Blusas e Camisas</li>
+                    <li><a href="#" target="_self"></a>Calças</li>
+                    <li><a href="#" target="_self"></a>Saias</li>
+                    <li><a href="#" target="_self"></a>Vestidos</li>
+                    <li><a href="#" target="_self"></a>Sapatos</li>
+                    <li><a href="#" target="_self"></a>Bolsas e Casteiras</li>
+                    <li><a href="#" target="_self"></a>Acessórios</li>
+                </ul>
+            </nav>
+        </section>
+        <!-- Fim menu-departamentos -->
+
+        <section class="banner-destaque">
+            <figure>
+                <img src="../mirrorfashion/img/destaque-home.png" alt="Promoção: Big City Night">
+            </figure>
+        </section>
     </div>
 
-    <!--Painéis com destaques-->
-    <div id="destaques">
+    <!-- Painéis -->
+    <div class="container paineis">
+        <section class="painel novidades">
+            <h2>Novidades</h2>
+            <ol>
+                <!-- primeiro produto-->
+                <li>
+                    <a href="produto.html" target="_self">
+                        <figure>
+                            <img src="../mirrorfashion/img/produtos/miniatura1.png" alt="miniatura1">
+                            <figcaption>
+                                Fuzz Cardigan por R$ 129,90
+                            </figcaption>
+                        </figure>
+                    </a>
+                </li>
 
+                <!-- fim do primeiro produto -->
+
+                <!-- segundo produto-->
+                <li>
+                    <a href="produto.html" target="_self">
+                        <figure>
+                            <img src="../mirrorfashion/img/produtos/miniatura2.png" alt="miniatura1">
+                            <figcaption>
+                                Fuzz Cardigan por R$ 129,90
+                            </figcaption>
+                        </figure>
+                    </a>
+                </li>
+
+                <!-- fim do segundo produto -->
+
+                <!-- terceiro produto-->
+                <li>
+                    <a href="produto.html" target="_self">
+                        <figure>
+                            <img src="../mirrorfashion/img/produtos/miniatura3.png" alt="miniatura1">
+                            <figcaption>
+                                Fuzz Cardigan por R$ 129,90
+                            </figcaption>
+                        </figure>
+                    </a>
+                </li>
+
+                <!-- fim do terceiro produto -->
+
+                <!-- quarto produto-->
+                <li>
+                    <a href="produto.html" target="_self">
+                        <figure>
+                            <img src="../mirrorfashion/img/produtos/miniatura4.png" alt="miniatura1">
+                            <figcaption>
+                                Fuzz Cardigan por R$ 129,90
+                            </figcaption>
+                        </figure>
+                    </a>
+                </li>
+
+                <!-- fim do quarto produto -->
+
+                <!-- quinto produto-->
+                <li>
+                    <a href="produto.html" target="_self">
+                        <figure>
+                            <img src="../mirrorfashion/img/produtos/miniatura5.png" alt="miniatura1">
+                            <figcaption>
+                                Fuzz Cardigan por R$ 129,90
+                            </figcaption>
+                        </figure>
+                    </a>
+                </li>
+
+                <!-- fim do quinto produto -->
+
+                <!-- sexto produto-->
+                <li>
+                    <a href="produto.html" target="_self">
+                        <figure>
+                            <img src="../mirrorfashion/img/produtos/miniatura6.png" alt="miniatura1">
+                            <figcaption>
+                                Fuzz Cardigan por R$ 129,90
+                            </figcaption>
+                        </figure>
+                    </a>
+                </li>
+
+                <!-- fim do sexto produto -->
+            </ol>
+        </section>
+
+        <!-- Segundo painél -->
+        <section class="painel mais-vendidos">
+            <h2>Mais Vendidos</h2>
+            <ol>
+                <!-- primeiro produto-->
+                <li>
+                    <a href="produto.html" target="_self">
+                        <figure>
+                            <img src="../mirrorfashion/img/produtos/miniatura7.png" alt="miniatura1">
+                            <figcaption>
+                                Fuzz Cardigan por R$ 129,90
+                            </figcaption>
+                        </figure>
+                    </a>
+                </li>
+                <!-- fim primeiro produto -->
+
+                <!-- segundo produto-->
+                <li>
+                    <a href="produto.html" target="_self">
+                        <figure>
+                            <img src="../mirrorfashion/img/produtos/miniatura8.png" alt="miniatura1">
+                            <figcaption>
+                                Fuzz Cardigan por R$ 129,90
+                            </figcaption>
+                        </figure>
+                    </a>
+                </li>
+                <!-- fim segundo produto -->
+
+                <!-- terceiro produto-->
+                <li>
+                    <a href="produto.html" target="_self">
+                        <figure>
+                            <img src="../mirrorfashion/img/produtos/miniatura9.png" alt="miniatura1">
+                            <figcaption>
+                                Fuzz Cardigan por R$ 129,90
+                            </figcaption>
+                        </figure>
+                    </a>
+                </li>
+                <!-- fim terceiro produto -->
+
+                <!-- quarto produto-->
+                <li>
+                    <a href="produto.html" target="_self">
+                        <figure>
+                            <img src="../mirrorfashion/img/produtos/miniatura10.png" alt="miniatura1">
+                            <figcaption>
+                                Fuzz Cardigan por R$ 129,90
+                            </figcaption>
+                        </figure>
+                    </a>
+                </li>
+                <!-- fim quarto produto -->
+
+                <!-- quinto produto-->
+                <li>
+                    <a href="produto.html" target="_self">
+                        <figure>
+                            <img src="../mirrorfashion/img/produtos/miniatura11.png" alt="miniatura1">
+                            <figcaption>
+                                Fuzz Cardigan por R$ 129,90
+                            </figcaption>
+                        </figure>
+                    </a>
+                </li>
+                <!-- fim quinto produto -->
+
+                <!-- sexto produto-->
+                <li>
+                    <a href="produto.html" target="_self">
+                        <figure>
+                            <img src="../mirrorfashion/img/produtos/miniatura12.png" alt="miniatura1">
+                            <figcaption>
+                                Fuzz Cardigan por R$ 129,90
+                            </figcaption>
+                        </figure>
+                    </a>
+                </li>
+                <!-- fim sexto produto -->
+            </ol>
+        </section>
     </div>
-
     <!--Conteúdo do rodapé-->
     <footer>
 
