--- a/arquivos-web/mirrorfashion/sobre.html
+++ b/arquivos-web/mirrorfashion/sobre.html
@@ -10,10 +10,27 @@
 </head>
 
 <body>
-    <img src="../mirrorfashion/img/logo.png" alt="Logo da mirrorfashion">
 
-    <h1>A Mirror Fashion</h1>
+    <!--Conteúdo Cabeçalho-->
+    <header class="container">
+        <!--[if	lt	IE	9]>
+			<script	src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+		<![endif]-->
+        <!-- Título da página -->
+        <h1><img src="../mirrorfashion/img/logo.png" alt="Mirror Fashion"></h1>
+        
+        <h1>A Mirror Fashion</h1>
 
+        <nav class="menu-opcoes">
+            <ul>
+                <li><a href="#" target="_self">Sua Conta</a></li>
+                <li><a href="#" target="_self">Lista de Desejos</a></li>
+                <li><a href="#" target="_self">Cartâo Fidelidade</a></li>
+                <li><a href="sobre.html" target="_self">Sobre</a></li>
+                <li><a href="#" target="_self">ajuda</a></li>
+            </ul>
+        </nav>
+    </header>
 
     <figure id="centro-distribuicao">
         <img src="../mirrorfashion/img/centro-distribuicao.png" alt="Foto do centro de distribuição da Mirror Fashion">
