create, format footer and add image buttom.

--- a/arquivos-web/mirrorfashion/index.html
+++ b/arquivos-web/mirrorfashion/index.html
@@ -244,7 +244,16 @@
     </div>
     <!--Conteúdo do rodapé-->
     <footer>
-
+        <!-- aplicar class container -->
+        <div class="container">
+            <!-- ciar lista para alocação de links-->
+            <img src="../mirrorfashion/img/logo-rodape.png" alt="Logo da Mirror Fashion">
+            <ul class="social">
+                <li><a href="http://facebook.com/mirrorfashion" target="_blank">Facebook</a></li>
+                <li><a href="http://twitter.com/mirrorfashion" target="_blank">Twitter</a></li>
+                <li><a href="http://plus.google.com/mirrorfashion" target="_blank">Google</a></li>
+            </ul>
+        </div>
     </footer>
 </body>
 
