working with css in formating of styles advancet.

--- a/arquivos-web/mirrorfashion/index.html
+++ b/arquivos-web/mirrorfashion/index.html
@@ -48,7 +48,14 @@
             <h2>Departamentos</h2>
             <nav>
                 <ul>
-                    <li><a href="#" target="_self"></a>Blusas e Camisas</li>
+                    <li><a href="#" target="_self"></a>Blusas e Camisas
+                        <ul>
+                            <li><a href="http://">Manga curta</a></li>
+                            <li><a href="http://">Manga comprida</a></li>
+                            <li><a href="http://">Camisa social</a></li>
+                            <li><a href="http://">Camisa casual</a></li>
+                        </ul>
+                    </li>
                     <li><a href="#" target="_self"></a>Calças</li>
                     <li><a href="#" target="_self"></a>Saias</li>
                     <li><a href="#" target="_self"></a>Vestidos</li>
