--- a/arquivos-web/mirrorfashion/sobre.html
+++ b/arquivos-web/mirrorfashion/sobre.html
@@ -37,11 +37,11 @@
             <img src="../mirrorfashion/img/centro-distribuicao.png"
                 alt="Foto do centro de distribuição da Mirror Fashion">
             <figcaption>
-                <p>Centro de distribuição da mirror Fashion</p>
+                </p>Centro de distribuição da mirror Fashion</p>
             </figcaption>
         </figure>
         <section>
-            <p> A <strong> Mirror Fashion </strong> é a maior empresa comércio eletrônico no segmento de moda em todo o
+            <p class="first-line"> A <strong> Mirror Fashion </strong> é a maior empresa comércio eletrônico no segmento de moda em todo o
                 mundo.
                 <em>Fundada em 1932, possui filiais em 124 países, sendo líder de mercado com mais de 90% de
                     participação em 118 deles</em>.</p>
@@ -49,7 +49,7 @@
             <p> Nosso centro de distribuição fica em Jacarezinho, no Paraná. De lá, saem 48 aviões que
                 distribuem nossos produtos às casas do mundo todo. Nosso centro de distribuição:</p>
 
-            <p> Compre suas roupas e acessórios na Mirror Fashion. Acesse <a href="../mirrorfashion/index.html"
+            <p class="nd"> Compre suas roupas e acessórios na Mirror Fashion. Acesse <a href="../mirrorfashion/index.html"
                     target="_self">
                     nossa loja </a>ou entre em contato
                 se tiver dúvidas. Conheça também nossa <a href="#historia"> história </a> e nossos <a
